[modify] teamページの用意

--- a/team/index.html
+++ b/team/index.html
@@ -5,12 +5,12 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>About | TakizawaHackathon // 滝沢市のハッカソンコミュニティ</title>
+  <title>Team | TakizawaHackathon // 滝沢市のハッカソンコミュニティ</title>
   <meta name="keyword" content="TakizawaHachathon,滝沢ハッカソン,ハッカソン,岩手IT,学生">
   <meta name=”description” content=”TakizawaHackathonは岩手の学生が主役のハッカソンコミュニティです。普段、作業を共にしない仲間とチームを組みものづくりすることで、新しいスキルや刺激を得るための機会として、ver.3を2017/08/05（土）、08/06（日）の2日間、開催します。” />
 
 
-  <meta property="og:title" content="About | TakizawaHackathon // 滝沢市のハッカソンコミュニティ" />
+  <meta property="og:title" content="Team | TakizawaHackathon // 滝沢市のハッカソンコミュニティ" />
   <meta property="og:description" content="TakizawaHackathonは岩手の学生が主役のハッカソンコミュニティです。普段、作業を共にしない仲間とチームを組みものづくりすることで、新しいスキルや刺激を得るための機会として、ver.3を2017/08/05（土）、08/06（日）の2日間、開催します。" />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://takizawa-hackathon.github.io/" />
@@ -107,7 +107,7 @@
               <li class="hidden"><a href="#page-top"></a></li>
               <li><a class="page-scroll" href="/">HOME</a></li>
               <li><a class="page-scroll" href="/about">ABOUT</a></li>
-              <li><a class="page-scroll" href="/team">TEAM</a></li>              
+              <li><a class="page-scroll" href="/team">TEAM</a></li>
             </ul>
           </div>
           <!-- /.navbar-collapse -->
@@ -121,248 +121,14 @@
 
     <div class="orig-jumbotron" id="background-particles">
       <div class="content">
-        <h1 class="page-title-h1">About</h1>
-        <h2 class="page-title-h2">私たちについて</h2>
+        <h1 class="page-title-h1">Team</h1>
+        <h2 class="page-title-h2">運営チーム</h2>
       </div>
     </div>
     <!-- .Jumbotron-->
 
     <article class="simple-page-main-section">
-      <section id="fitst-message" class="first-message">
-        <div class="container simple-page-wrapper">
-          <div class="row">
-            <p><strong>TakizawaHackathon</strong>は「共創」をテーマとして、ものづくりに興味のある岩手の学生間の交流の場を作るために立ち上がりました。集まった仲間とチームを立ち上げ、目的を共有し、お互いを尊重し磨き合える関係で世の中へ価値あるものが生まれる場を育てていきます。</p>
-          </div>
-        </div>
-      </section>
-      <!-- .fitst-message -->
 
-      <section id="our-mission" class="our-mission">
-        <div class="container simple-page-wrapper">
-          <div class="row">
-            <div class="section-titles">
-              <h3>our mission</h3>
-              <p class="sub-title">私たちの目的</p>
-            </div>
-
-            <div class="section-missions simple-list">
-              <ul>
-                <li>岩手のクリエイティブな学生の交流が生まれる場をつくります</li>
-                <li>ハッカソンに限らず、さまざまなイベントを持続的に開催します</li>
-                <li>ITを活かしたプロダクトを岩手から発信し、継続的な運用を目指します</li>
-                <li>岩手のIT界を盛り上げていきます</li>
-              </ul>
-            </div>
-          </div>
-        </div>
-      </section>
-      <!-- .our-mission -->
-
-      <section id="what-we-do" class="what-we-do">
-        <div class="container simple-page-wrapper">
-          <div class="row">
-            <div class="section-titles">
-              <h3>What we do</h3>
-              <p class="sub-title">私たちがやっていること</p>
-            </div>
-
-            <div class="section-what-we-do simple-list">
-              <ul>
-                <li>地域に根ざしたハッカソンの企画・運営</li>
-                <li>勉強会の企画・運営</li>
-                <li>IT関連企業と共同した様々なイベント企画・運営</li>
-              </ul>
-            </div>
-          </div>
-        </div>
-      </section>
-      <!-- .what-we-do -->
-
-      <section id="what-we-believe" class="what-we-believe">
-        <div class="container simple-page-wrapper">
-          <div class="row">
-            <div class="section-titles">
-              <h3>What We Believe</h3>
-              <p class="sub-title">私たちが大切にしていること</p>
-            </div>
-
-            <div class="section-we-believe">
-              <ol>
-                <li>
-                  <p>ワクワクは広がっていく</p>
-                  <span>何を生み出すとしても、自分たちがワクワクするものをつくる。ワクワクは自分やチームを通して周りに広がる。</span>
-                </li>
-                <li>
-                  <p>考え同時に走り出す</p>
-                  <span>考えすぎて立ち止まってしまうより、まずカタチにしていく。</span>
-                </li>
-                <li>
-                  <p>仲間と共に創っていく</p>
-                  <span>共感し合える目的を共有し、理想に向かって共に走り続ける。</span>
-                </li>
-                <li>
-                  <p>チームをみんなで考える</p>
-                  <span>得意なことをのびのびと、少しずつ成果を出していく。何事も「自分ごと」として行動し、小さな約束を守り続け、お互いを尊重したオープンなコミュニケーションを大事にする。</span>
-                </li>
-              </ol>
-            </div>
-          </div>
-        </div>
-      </section>
-      <!-- .what-we-believe -->
-
-      <section id="in-future" class="in-future">
-        <div class="container simple-page-wrapper">
-          <div class="row">
-            <div class="section-titles">
-              <h3>In future</h3>
-              <p class="sub-title">運営チームの考える”これから”</p>
-            </div>
-
-            <div class="section-in-future simple-list">
-              <ul>
-                <li>TakizawaHackathonで生まれたプロダクトの継続的な開発・運用の支援</li>
-                <div class="nested-simple-list">
-                  <ul>
-                    <li>プロダクトのリリース後、実際にユーザーに価値を提供していく運用フェーズに関わる疑問や進め方に関してアドバイザーという立場で共に考え、協力企業と連携しながら継続的な支援を行います</li>
-                  </ul>
-                </div>
-              </ul>
-            </div>
-          </div>
-        </div>
-      </section>
-      <!-- .in-future -->
-
-      <section id="history" class="history">
-        <div class="container simple-page-wrapper">
-          <div class="row">
-            <div class="section-titles">
-              <h3>History</h3>
-              <p class="sub-title">沿革</p>
-            </div>
-
-            <div class="section-in-future">
-              <ul class="timeline">
-                <li class="timeline-event">
-                  <label class="timeline-event-icon"></label>
-                  <div class="timeline-event-copy">
-                    <p class="timeline-event-thumbnail">2016/11/19</p>
-                    <h3>TakizawaHackathon ver.1を開催</h3>
-                    <h4>コミュニティが立ち上がり、初めてのハッカソンを開催しました。</h4>
-                    <div class="time-line-info-list">
-                      <ul>
-                        <li>
-                          <p class="time-line-event-comment">
-                            <strong>テーマ</strong><br> 知る人ぞ知る
-                          </p>
-                        </li>
-                        <li>
-                          <p class="time-line-event-comment">
-                            <strong>開催場所</strong><br> 滝沢市IPU第2イノベーションセンター
-                          </p>
-                        </li>
-                        <li>
-                          <p class="time-line-event-comment">
-                            <strong>参加人数</strong><br> 20名程度
-                          </p>
-                        </li>
-                        <li>
-                          <p class="time-line-event-comment">
-                            <strong><a href="https://www.facebook.com/events/202342693527634/">Facebookイベントページ<i class="fa fa-external-link" aria-hidden="true"></i></a></strong><br>
-                          </p>
-                        </li>
-                      </ul>
-                    </div>
-                  </div>
-                </li>
-                <li class="timeline-event">
-                  <label class="timeline-event-icon"></label>
-                  <div class="timeline-event-copy">
-                    <p class="timeline-event-thumbnail">2017/02/27</p>
-                    <h3>TakizawaHackathon ver.2を開催</h3>
-                    <h4>第２回目となるハッカソンイベントを開催しました。</h4>
-                    <div class="time-line-info-list">
-                      <ul>
-                        <li>
-                          <p class="time-line-event-comment">
-                            <strong>テーマ</strong><br> 尖ったプロダクトで相手のこころを変える
-                          </p>
-                        </li>
-                        <li>
-                          <p class="time-line-event-comment">
-                            <strong>開催場所</strong><br> 滝沢市IPU第2イノベーションセンター
-                          </p>
-                        </li>
-                        <li>
-                          <p class="time-line-event-comment">
-                            <strong>参加人数</strong><br> 10名程度
-                          </p>
-                        </li>
-                        <li>
-                          <p class="time-line-event-comment">
-                            <strong><a href="https://www.facebook.com/events/206098249794623/">Facebookイベントページ<i class="fa fa-external-link" aria-hidden="true"></i></a></strong><br>
-                          </p>
-                        </li>
-                      </ul>
-                    </div>
-                  </div>
-                </li>
-                <li class="timeline-event">
-                  <label class="timeline-event-icon"></label>
-                  <div class="timeline-event-copy">
-                    <p class="timeline-event-thumbnail">2017/08/05</p>
-                    <h3>TakizawaHackathon ver.3を開催</h3>
-                    <h4>開催内容を一新した滝沢ハッカソンを開催します。ITベンチャー企業であるオズビジョン様からの協賛などにより、より充実した内容を準備中です。</h4>
-                    <div class="time-line-info-list">
-                      <ul>
-                        <li>
-                          <p class="time-line-event-comment">
-                            <strong>テーマ</strong><br> 近日公開
-                          </p>
-                        </li>
-                        <li>
-                          <p class="time-line-event-comment">
-                            <strong>開催場所</strong><br> 滝沢市IPU第2イノベーションセンター
-                          </p>
-                        </li>
-                        <li>
-                          <p class="time-line-event-comment">
-                            <strong>参加人数</strong><br> 20名ほどの予定
-                          </p>
-                        </li>
-                        <li>
-                          <p class="time-line-event-comment">
-                            <strong><a href="https://www.facebook.com/events/1906125736343140">Facebookイベントページ<i class="fa fa-external-link" aria-hidden="true"></i></a></strong><br>
-                          </p>
-                        </li>
-                      </ul>
-                    </div>
-                  </div>
-                </li>
-              </ul>
-            </div>
-          </div>
-        </div>
-      </section>
-      <!-- .history -->
-
-      <section id="to-company" class="to-company">
-        <div class="container simple-page-wrapper">
-          <div class="row">
-            <div class="section-titles">
-              <h3>To companies and organizations</h3>
-              <p class="sub-title">企業・団体さまへ</p>
-            </div>
-
-            <div class="section-to-company">
-              <p>TakizawaHackathonでは、これから持続的なイベント運営、プロダクト開発の支援を行っていく所存です。当活動内容にご賛同いただき、ご協賛頂ける企業・団体を募集しています。</p>
-              <a href="https://goo.gl/forms/2ar7szy7VKWODRz32" class="btn blue-btn btn-default blue-btn-shadow wf-notosansjapanese" target="_blank">お問い合わせ</a>
-            </div>
-          </div>
-        </div>
-      </section>
-      <!-- .to-company -->
     </article>
 
     <footer class="footer">
