[modify] teamページの実装

--- a/about/index.html
+++ b/about/index.html
@@ -90,14 +90,14 @@
         <div class="container">
           <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
-                        <span class="sr-only">Toggle navigation</span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
+              <span class="sr-only">Toggle navigation</span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
             <a class="navbar-brand page-scroll" href="/">
-                      <svg class="navbar-brand-svg"><use xlink:href="#logo"/></svg>
-                    </a>
+              <svg class="navbar-brand-svg"><use xlink:href="#logo"/></svg>
+            </a>
           </div>
 
           <!-- Collect the nav links, forms, and other content for toggling -->
@@ -105,9 +105,10 @@
             <ul class="nav navbar-nav">
               <!-- Hidden li included to remove active class from about link when scrolled up past about section -->
               <li class="hidden"><a href="#page-top"></a></li>
-              <li><a class="page-scroll" href="/">HOME</a></li>
-              <li><a class="page-scroll" href="/about">ABOUT</a></li>
-              <li><a class="page-scroll" href="/team">TEAM</a></li>              
+              <li><a href="/">HOME</a></li>
+              <li><a href="/about/">ABOUT</a></li>
+              <li><a href="/team/">TEAM</a></li>
+              <li><a href="https://goo.gl/forms/coPY9OMGNIa9Xaph2">参戦する</a></li>
             </ul>
           </div>
           <!-- /.navbar-collapse -->
