--- a/index.html
+++ b/index.html
@@ -96,10 +96,10 @@
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse navbar-right navbar-main-collapse">
                     <ul class="nav navbar-nav">
-                        <li><a class="page-scroll" href="/">HOME</a></li>
-                        <li><a class="page-scroll" href="/about">ABOUT</a></li>
-                        <li><a class="page-scroll" href="/team">TEAM</a></li>
-                        <li><a class="page-scroll" href="#section-entry">参戦する</a></li>
+                        <li><a href="/">HOME</a></li>
+                        <li><a href="/about/">ABOUT</a></li>
+                        <li><a href="/team/">TEAM</a></li>
+                        <li><a href="https://goo.gl/forms/coPY9OMGNIa9Xaph2">参戦する</a></li>
                     </ul>
                 </div>
                 <!-- /.navbar-collapse -->
