--- a/index.html
+++ b/index.html
@@ -427,7 +427,7 @@
                   <div class="col-md-12">
                       <div class="sponsor-category">
                           <h2>スポンサー募集について</h2>
-                          <p>当ハッカソンでは現在スポンサーを募集しています</p>
+                          <p>当ハッカソンでは現在スポンサーを募集しています。<br>詳しくは<a href="/about">ABOUT</a>をご覧ください。</p>
                       </div>
                   </div>
               </div>
@@ -447,7 +447,7 @@
     </section>
     <!-- .client-logo -->
 
-    <section id="section-hall" class="section-wrapper section-hall">
+    <section id="section-hall" class="section-wrapper section-hall  gray-bg">
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
@@ -466,36 +466,6 @@
             </div>
         </div>
     </section>
-
-
-
-    <section id="section-team" class="section-wrapper team gray-bg">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-12">
-                    <div class="section-title">
-                        <h1>運営チーム</h1>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-              <div class="col-sm-6 col-md-3 col-md-offset-3">
-                <div class="member-img">
-                  <a href="https://www.facebook.com/profile.php?id=100006862331153&fref=ts"><img src="img/t-sasaki.jpg" class="img-responsive"  alt="Image"></a>
-                </div>
-              </div>
-              <!-- /.col-sm-6 -->
-
-              <div class="col-sm-6 col-md-3">
-                  <div class="member-img">
-                    <a href="https://www.facebook.com/rkonno"><img src="img/r-konno.jpg"  class="img-responsive" alt="Image"></a>
-                  </div>
-              </div>
-            </div>
-        </div>
-        <!-- /.container -->
-    </section>
-    <!-- .team -->
 
     <section id="section-entry" class="section-wrapper">
         <div class="container">
