--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <meta property="og:url" content="https://takizawa-hackathon.github.io/" />
     <meta property="og:image" content="https://takizawa-hackathon.github.io/img/og_image.png" />
     <meta property="og:site_name" content="Takizawa Hackathon" />
+    <meta property="fb:app_id" content="242241782946256" />
 
     <!-- favicon -->
     <link href="img/favicon.ico" rel=icon>
