--- a/team/index.html
+++ b/team/index.html
@@ -12,10 +12,11 @@
 
   <meta property="og:title" content="Team | Takizawa Hackathon // 滝沢市のハッカソンコミュニティ" />
   <meta property="og:description" content="Takizawa Hackathonは岩手の学生が主役のハッカソンコミュニティです。普段、作業を共にしない仲間とチームを組みものづくりすることで、新しいスキルや刺激を得るための機会として、ver.3を2017/08/05（土）、08/06（日）の2日間、開催します。" />
-  <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://takizawa-hackathon.github.io/" />
+  <meta property="og:type" content="article" />
+  <meta property="og:url" content="https://takizawa-hackathon.github.io/team/" />
   <meta property="og:image" content="https://takizawa-hackathon.github.io/img/og_image.png" />
   <meta property="og:site_name" content="Takizawa Hackathon" />
+  <meta property="fb:app_id" content="242241782946256" />
 
   <!-- favicon -->
   <link href="../img/favicon.ico" rel=icon>
