[modify] about 文言修正

--- a/about/index.html
+++ b/about/index.html
@@ -148,10 +148,10 @@
 
             <div class="section-missions simple-list">
               <ul>
-                <li>岩手のクリエイティブな学生の交流が生まれる場をつくります</li>
-                <li>ハッカソンに限らず、さまざまなイベントを持続的に開催します</li>
-                <li>ITを活かしたプロダクトを岩手から発信し、継続的な運用を目指します</li>
-                <li>岩手のIT界を盛り上げていきます</li>
+                <li>岩手のクリエイティブな学生がどんどんつながる、そんなコミュニティをつくっていこう</li>
+                <li>ハッカソンに限らず、さまざまなイベントを持続的に開催しよう</li>
+                <li>ITを活かしたプロダクトを岩手から発信し、継続的な運用を目指そう</li>
+                <li>岩手のIT界を盛り上げていこう</li>
               </ul>
             </div>
           </div>
