--- a/team/index.html
+++ b/team/index.html
@@ -17,7 +17,12 @@
   <meta property="og:site_name" content="Takizawa Hackathon" />
 
   <!-- favicon -->
-  <link href="../img/favicon.ico" rel=icon>
+  <link href="/favicons/favicon.ico" rel=icon>
+  <link rel="apple-touch-icon" sizes="180x180" href="/favicons/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicons/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicons/favicon-16x16.png">
+  <link rel="manifest" href="/manifest.json">
+  <meta name="theme-color" content="#ffffff">
 
   <!-- web-fonts -->
   <link href='https://fonts.googleapis.com/css?family=Roboto:100,300,400,700,500' rel='stylesheet' type='text/css' />
