[modify] team-position, th-appealセクション追加

--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
     </section>
     <!-- .about-event -->
 
-    <section id="section-th-flow" class="section-wrapper section-ajenda gray-bg">
+    <section id="section-th-flow" class="section-wrapper section-th-flow gray-bg">
       <div class="container">
         <div class="row">
           <div class="col-md-12">
@@ -229,8 +229,112 @@
           </div>
         </div>
       </div>
-
     </section>
+    <!-- section-th-flow -->
+
+    <section id="section-team-position" class="section-wrapper section-team-position">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12">
+            <div class="section-title">
+              <h1>チームにおける多様なポジション</h1>
+            </div>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-sm-6 col-md-4">
+            <div class="omni-card">
+              <div class="circle-image">
+                <div class="circle-image-wrapper">
+                  <img src="/img/team-position/watercolor.png" alt="デザイナーのイメージ画像">
+                </div>
+              </div>
+              <div class="description">
+                <h3>デザイナー</h3>
+                <p>ハッカソンではデザインができる・興味関心があるという志向がさまざまな場面で活きます。絵を描くことが得意・好きだ（デザインがしたい）という人がいるとチームは強くなります。アイディア出しからブランディング、ネーミング、ロゴ、プレゼン資料作成など、デザイナーが活躍する場は考えうる以上に多く存在し、あなたのセンスがプロダクトにじわじわと個性を宿していきます！</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-6 col-md-4">
+            <div class="omni-card">
+              <div class="circle-image">
+                <img src="/img/team-position/computer.png" alt="エンジニアのイメージ画像">
+              </div>
+              <div class="description">
+                <h3>エンジニア</h3>
+                <p>ハッカソンではエンジニアが「解決すべき問題」を持っている「技術」を用いて解決します。最終的に動くものを作り上げることが重要ですが、そのための手段は無数に存在し、その選択はあなた次第です。普段のものづくりの中でゼロから完成まで作り切ることはあまり経験できないものですが、ハッカソンではそれを２日で体感できます。あなたの手が動いた分だけプロダクトは磨かれていきます！</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-6 col-md-4">
+            <div class="omni-card">
+              <div class="circle-image">
+                <img src="/img/team-position/agenda.png" alt="プランナーのイメージ画像">
+              </div>
+              <div class="description">
+                <h3>プランナー</h3>
+                <p>ハッカソンではみんなで企画を考えますが、その中でプランナーはできあがっていくものが「どうしたらより多くの人に響くか」を考え、より評価されるための努力をします。周りの人々にヒアリングして実際のユーザーの声をもとに仮説を検証したり、メンバーや審査員の気持ちを掴む仕掛け（プレゼンの準備やプロダクトのストーリーを考えたり）を率先して行うことで企画はより洗練されていきます！</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- section-team-position -->
+
+    <section id="section-th-appeal" class="section-wrapper ection-th-appeal gray-bg">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12">
+            <div class="section-title">
+              <h1>今回のハッカソンの魅力</h1>
+            </div>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-sm-6 col-md-4">
+            <div class="omni-card">
+              <div class="circle-image">
+                <div class="circle-image-wrapper">
+                  <img src="/img/th-appeal/ozvision.png" alt="Ozvision社のロゴ">
+                </div>
+              </div>
+              <div class="description">
+                <h3>現役エンジニアがフルコミット</h3>
+                <div class="description-accordion-container">
+                  <p>ver.3では、Webサービスを複数展開している東京のITベンチャー企業であるオズビジョン社の第一線で活躍される現役エンジニアの方々に各チームそれぞれ１名フルコミットしていただき、共にプロダクトの開発に打ち込むことで、エンジニア・デザイナー・プランナーとしての能力を高めることができる場となっています！</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-6 col-md-4">
+            <div class="omni-card">
+              <div class="circle-image">
+                <img src="/img/th-appeal/meeting.png" alt="審議中のイメージ画像">
+              </div>
+              <div class="description">
+                <h3>参加者全員で審査しあう</h3>
+                <p>２日間、共に同じ場で開発してきたそれぞれのチーム。ハッカソンでどのチームが頑張ったか、凄いと思ったか、それを一番に評価できるのはやはり参加者自身だと考えます。２日目のプレゼンタイムの後、参加者全員でそれぞれのチームへの投票を行う仕組みを用意し、この結果をもとに表彰を行います！</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-6 col-md-4">
+            <div class="omni-card">
+              <div class="circle-image">
+                <img src="/img/th-appeal/motivation.png" alt="継続的なモチベーションのイメージ画像">
+              </div>
+              <div class="description">
+                <h3>継続的に創り続けられる</h3>
+                <p>ハッカソンでは、必死の思いで２日間で創りあげたプロダクトであっても継続した開発が行われず、結局日の目を見ることがないということが少なくありません。今回からハッカソン後、希望するチームに対して運営チームや協力企業様がアドバイザーとして継続的なプロダクト開発を行う仕組みを用意しています。</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- section-team-position -->
 
     <section id="section-timetable" class="section-wrapper section-ajenda gray-bg">
       <div class="container">
@@ -366,13 +470,11 @@
               <h3>盛岡駅周辺でアフターパーティー（懇親会）を開催します<br>奮ってご参加ください！</h3>
             </div>
             <!-- .session -->
-
-
           </div>
         </div>
       </div>
-
     </section>
+    <!-- section-timetable -->
 
     <section id="section-sponsors" class="section-wrapper client-logo">
       <div class="container">
@@ -514,7 +616,6 @@
       </div>
       <!--end of .container -->
     </section>
-    <!-- .client-logo -->
 
     <section id="section-hall" class="section-wrapper section-hall  gray-bg">
       <div class="container">
@@ -537,6 +638,7 @@
         </div>
       </div>
     </section>
+    <!-- section-hall -->
 
     <section id="section-entry" class="section-wrapper">
       <div class="container">
@@ -594,7 +696,7 @@
         </div>
       </div>
     </section>
-    <!-- contact-section -->
+    <!-- section-entry -->
 
     <section id="section-locus" class="section-wrapper gray-bg">
       <div class="container">
@@ -623,7 +725,7 @@
       </div>
       <!--end of .container -->
     </section>
-    <!-- .past -->
+    <!-- section-locus -->
 
 
     <footer class="footer">
