[modify] 言い回しを修正

--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
               <strong>Takizawa Hackathon</strong>は、岩手県の学生が集い、仲間と楽しみながらワクワクするような新しいものを生みだす、県内のエンジニア／デザイナー／プランナーなどのクリエイターのためのハッカソンコミュニティです。
             </p>
             <p class="lead">
-              8月5日-6日の土日にTakizawa Hackathon ver.3が開催されます。ver.3はこれまでのTakizawa Hackathonとは一味違う。さらに充実した場へと生まれ変わりました。
+              8月5日-6日の土日にTakizawa Hackathon ver.3が開催されます。ver.3はこれまでのTakizawa Hackathonから、さらに充実した場へと生まれ変わりました。
             </p>
             <p class="lead">
               東京のITベンチャー企業であるオズビジョン社の現役エンジニアと共にチームを組み、滝沢市にまつわる課題を解決するアイディアを考え、テクノロジーを用いて実現するワクワクする二日間を過ごしましょう！
