--- a/about/index.html
+++ b/about/index.html
@@ -364,7 +364,7 @@
             <div class="section-to-company">
               <p>Takizawa Hackathonでは、これから持続的なイベント運営、プロダクト開発の支援を行っていく所存です。当活動内容にご賛同いただき、ご協賛頂ける企業・団体を募集しています。</p>
               <p>現在、8月5日-6日で開催されるTakizawa Hackathon ver.3のスポンサーシップ募集を行っています。下記よりご確認いただけます。</p>
-              <a href="https://goo.gl/forms/B6f7h76VAYpwBw7B3" class="btn blue-btn btn-default blue-btn-shadow wf-notosansjapanese" target="_blank">スポンサーシップ募集</a>
+              <a href="https://goo.gl/forms/B6f7h76VAYpwBw7B3" class="btn blue-btn btn-default blue-btn-shadow wf-notosansjapanese" target="_blank">スポンサーになる</a>
             </div>
           </div>
         </div>
