--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   <!-- Style CSS -->
   <link href="css/style.css?20170719" rel="stylesheet" />
   <link href="css/customize.css" rel="stylesheet" />
-  <link href="css/top.css" rel="stylesheet" />
+  <link href="css/top.css?20170720" rel="stylesheet" />
 
   <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
   <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
