--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
         <div class="event-date"></div>
         <nav class="event-share-nav">
           <ul class="nav">
-            <li><a href="https://twitter.com/share" class="twitter-share-button" data-lang="ja" data-hashtags="hacktakizawa">ツイート</a></li>
+            <li><a href="https://twitter.com/share" class="twitter-share-button" data-lang="ja" data-hashtags="HackFromTakizawa">ツイート</a></li>
             <li>
               <div class="fb-like" data-href="https://www.facebook.com/TakizawaHackathon" data-layout="button_count" data-action="like" data-size="small" data-show-faces="false" data-share="false"></div>
             </li>
