[modify] commit-engineer fix

--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@
                 </div>
                 <div class="col-sm-8">
                   <div class="profile">
-                    <p class="company-name">オズビジョン株式会社</p>
+                    <p class="company-name">株式会社オズビジョン</p>
                     <h4 class="engineer-position">新規事業部 エンジニア</h4>
                     <h3 class="engineer-name">佐久間俊介</h3>
                     <p class="en-name">SAKUMA SHUNSUKE</p>
@@ -380,8 +380,8 @@
                 </div>
                 <div class="col-sm-8">
                   <div class="profile">
-                    <p class="company-name">オズビジョン株式会社</p>
-                    <h4 class="engineer-position">ハピタス事業部 リスク解消チーム エンジニア</h4>
+                    <p class="company-name">株式会社オズビジョン</p>
+                    <h4 class="engineer-position">ハピタス事業部 エンジニア</h4>
                     <h3 class="engineer-name">鎌田 啓雅</h3>
                     <p class="en-name">HIROMASA KAMADA</p>
                     <p class="intro">入社１年目の17卒エンジニア。岩手県立大学出身でHI研に所属していました。学生の方には「盛岡と東京の違いは？」「就活でどんなことを考えていたの？」など、年齢が近いからこそ伝えられることがあると思います。メンバー全員で協力して、よりよいモノを開発しましょう！</p>
@@ -402,7 +402,7 @@
                 </div>
                 <div class="col-sm-8">
                   <div class="profile">
-                    <p class="company-name">オズビジョン株式会社</p>
+                    <p class="company-name">株式会社オズビジョン</p>
                     <h4 class="engineer-position">新規事業部 エンジニア</h4>
                     <h3 class="engineer-name">y-kosuge</h3>
                     <p class="en-name">y-kosuge</p>
@@ -422,7 +422,7 @@
                 </div>
                 <div class="col-sm-8">
                   <div class="profile">
-                    <p class="company-name">オズビジョン株式会社</p>
+                    <p class="company-name">株式会社オズビジョン</p>
                     <h4 class="engineer-position">ハピタス事業部 エンジニア</h4>
                     <h3 class="engineer-name">橋本 宙</h3>
                     <p class="en-name">HASHIMOTO SORA</p>
