[modify] スポンサーシップに関して文言修正

--- a/index.html
+++ b/index.html
@@ -693,8 +693,8 @@
           <div class="row">
             <div class="col-md-12">
               <div class="sponsor-category">
-                <h2>スポンサー募集について</h2>
-                <p>当ハッカソンでは現在スポンサーを募集しています。</p>
+                <h2>スポンサーシップ募集について</h2>
+                <p>当ハッカソンでは現在スポンサーシップを募集しています。</p>
                 <p>Takizwa Hackathonコミュニティの活動に関しては<a href="/about">こちら</a>をご覧ください。</p>
               </div>
             </div>
