[modify] fix typo

--- a/index.html
+++ b/index.html
@@ -451,7 +451,7 @@
         <div class="row">
           <div class="col-md-12 section-day-wrap">
             <div class="section-day-title">
-              <h2 class="text-center">2016.08.05 1日目</h2>
+              <h2 class="text-center">2017.08.05 1日目</h2>
             </div>
           </div>
         </div>
@@ -472,7 +472,7 @@
             <!-- .session -->
 
             <div class="session">
-              <time>10:50 - 11:10AM</time>
+              <time>10:50AM - 11:10AM</time>
               <h2>チームキックオフ・アイスブレイク</h2>
               <h3>自己紹介の他、チーム名・目標などを決めます</h3>
             </div>
@@ -481,14 +481,14 @@
           </div>
           <div class="col-md-4">
             <div class="session">
-              <time>11:10 - 12:00AM</time>
+              <time>11:10AM - 12:00AM</time>
               <h2>アイディアソン</h2>
               <h3>楽しみながら互いのアイディアをシェアしてとっておきのアイディアを見つけましょう</h3>
             </div>
             <!-- .session -->
 
             <div class="session">
-              <time>12:00 - 1:00PM</time>
+              <time>12:00AM - 1:00PM</time>
               <h2>ランチタイム</h2>
               <h3>岩手県立大学の食堂でランチをしましょう<br>チームごとに島をつくってアイディアを育てよう<span>* 学食の利用の他, 昼食の持参可能です<span></h3>
             </div>
@@ -521,7 +521,7 @@
         <div class="row">
           <div class="col-md-12 section-day-wrap">
             <div class="section-day-title">
-              <h2 class="text-center">2016.08.06 2日目</h2>
+              <h2 class="text-center">2017.08.06 2日目</h2>
             </div>
           </div>
         </div>
@@ -567,7 +567,7 @@
             <!-- .session -->
 
             <div class="session">
-              <time>19:00M - </time>
+              <time>19:00PM - </time>
               <h2>アフターパーティー！</h2>
               <h3>盛岡駅周辺でアフターパーティー（懇親会）を開催します<br>奮ってご参加ください！</h3>
             </div>
