--- a/index.html
+++ b/index.html
@@ -840,9 +840,6 @@
   </div>
   <!-- #main-wrapper -->
 
-  <!-- ChatWindow -->
-  <div data-appid="seaj45nzph8" data-color="black" data-meson="当ハッカソンに関わる疑問やお問い合わせがありましたらお気軽に！" data-mesoff="ただいまチャットサポート担当オペレータがオフライン中です。メールアドレスとメッセージを残して頂ければ、後日返信致します。" milkchat></div>
-
   <!-- TweetButton -->
   <script>
     ! function(d, s, id) {
@@ -870,8 +867,10 @@
   <script src="js/jquery.easing.min.js"></script>
 
   <!-- ChatSupport -->
-  <script src="https://cdn.mlkcca.com/v0.6.0/milkcocoa.js"></script>
-  <script src="https://cdn.mlkcca.com/chatsupport.min.js"></script>
+  <script src='https://cdn.slaask.com/chat.js'></script>
+  <script>
+      _slaask.init('1b53df948635cfad55177600958bf551');
+  </script>
 
   <!-- particles-js -->
   <script src="js/particles.min.js"></script>
