[modify] fix name

--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@
                     <p class="company-name">株式会社オズビジョン</p>
                     <h4 class="engineer-position">新規事業部 エンジニア</h4>
                     <h3 class="engineer-name">佐久間俊介</h3>
-                    <p class="en-name">SAKUMA SHUNSUKE</p>
+                    <p class="en-name">SHUNSUKE SAKUMA</p>
                     <p class="intro">新卒4年目で、現在ソーシャルギフトサービスの開発・運用をしています。インフラ、フロント、CIとサービスに必要なところは一通り経験しました。CIを活用して自動化するところに興味があります。ハッカソンに参加するのは初めてですが、少しでも皆さんのお力になれたらと思います。とても楽しみにしています！</p>
                   </div>
                 </div>
@@ -450,7 +450,7 @@
                     <p class="company-name">株式会社オズビジョン</p>
                     <h4 class="engineer-position">ハピタス事業部 エンジニア</h4>
                     <h3 class="engineer-name">橋本 宙</h3>
-                    <p class="en-name">HASHIMOTO SORA</p>
+                    <p class="en-name">SORA HASHIMOTO</p>
                     <p class="intro">新卒４年目でチームマネジメントと、クラウドインフラ（AWS）の活用が得意です。ハッカソンは初めてですが、チームでの開発を進める中で何かしら貢献できればいいなと思いワクワクしてます。</p>
                   </div>
                 </div>
