[modify] スポンサー表示の追加

--- a/index.html
+++ b/index.html
@@ -690,9 +690,14 @@
             </div>
           </div>
           <div class="row">
-            <div class="col-sm-12 col-md-12">
+            <div class="col-sm-12 col-md-3 col-md-offset-3">
               <div class="sponsor-img">
                 <a href="http://www.oz-vision.co.jp/"><img src="img/ozvision.png" class="img-responsive" alt="Image"></a>
+              </div>
+            </div>
+            <div class="col-sm-12 col-md-3">
+              <div class="sponsor-img">
+                <a href="https://www.facebook.com/eye2.weave/"><img src="img/eye2→weave.png" class="img-responsive" alt="Image"></a>
               </div>
             </div>
           </div>
@@ -708,8 +713,8 @@
           </div>
           <div class="row">
             <div class="col-sm-12 col-md-12">
-              <div class="sponsor-img">
-                <a href="https://goo.gl/forms/B6f7h76VAYpwBw7B3"><img src="img/wanted.png" class="img-responsive" alt="Image"></a>
+              <div class="sponsor-img sponsor-img-horizontally-long">
+                <a href="http://m5trees.jp"><img src="img/m5trees.png" class="img-responsive" alt="Image"></a>
               </div>
             </div>
           </div>
