[modify] スポンサーセクションに関して修正

--- a/about/index.html
+++ b/about/index.html
@@ -181,7 +181,7 @@
                 <li>岩手のクリエイティブな学生がどんどんつながる、そんなコミュニティをつくっていこう</li>
                 <li>ハッカソンに限らず、さまざまなイベントを持続的に開催しよう</li>
                 <li>ITを活かしたプロダクトを岩手から発信し、継続的な運用を目指そう</li>
-                <li>岩手のIT界を盛り上げていこう</li>
+                <li>岩手を、岩手のIT界を盛り上げていこう</li>
               </ul>
             </div>
           </div>
@@ -201,7 +201,7 @@
               <ul>
                 <li>地域に根ざしたハッカソンの企画・運営</li>
                 <li>勉強会の企画・運営</li>
-                <li>IT関連企業と共同した様々なイベント企画・運営</li>
+                <li>ITに限らず多様な企業と共同した様々なイベント企画・運営</li>
               </ul>
             </div>
           </div>
