[modify] おやつスポンサーの追加

--- a/index.html
+++ b/index.html
@@ -669,35 +669,13 @@
           <div class="row">
             <div class="col-md-12">
               <div class="sponsor-category">
-                <h2>SNACK SPONSOR</h2>
-                <p>おやつスポンサー</p>
-              </div>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-sm-12 col-md-12">
-              <div class="sponsor-img">
-                <a href="http://www.oz-vision.co.jp/"><img src="img/ozvision.png" class="img-responsive" alt="Image"></a>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="sponsor-section">
-          <div class="row">
-            <div class="col-md-12">
-              <div class="sponsor-category">
                 <h2>DRINK SPONSOR</h2>
                 <p>ドリンクスポンサー</p>
               </div>
             </div>
           </div>
           <div class="row">
-            <div class="col-sm-12 col-md-3 col-md-offset-3">
-              <div class="sponsor-img">
-                <a href="http://www.oz-vision.co.jp/"><img src="img/ozvision.png" class="img-responsive" alt="Image"></a>
-              </div>
-            </div>
-            <div class="col-sm-12 col-md-3">
+            <div class="col-sm-12 col-md-12">
               <div class="sponsor-img">
                 <a href="https://www.facebook.com/eye2.weave/"><img src="img/eye2→weave.png" class="img-responsive" alt="Image"></a>
               </div>
@@ -708,15 +686,15 @@
           <div class="row">
             <div class="col-md-12">
               <div class="sponsor-category">
-                <h2>LUNCH SPONSOR</h2>
-                <p>ランチスポンサー</p>
+                <h2>SNACK SPONSOR</h2>
+                <p>おやつスポンサー</p>
               </div>
             </div>
           </div>
           <div class="row">
             <div class="col-sm-12 col-md-12">
               <div class="sponsor-img">
-                <a href="https://goo.gl/forms/B6f7h76VAYpwBw7B3"><img src="img/wanted.png" class="img-responsive" alt="Image"></a>
+                <a href="http://www.coosy.co.jp/"><img src="img/coosy.png" class="img-responsive" alt="Image"></a>
               </div>
             </div>
           </div>
