[modify] トップページをver.3専用ページを作って移行

--- a/tracks/ver3.html
+++ b/tracks/ver3.html
@@ -138,9 +138,7 @@
           <!-- Collect the nav links, forms, and other content for toggling -->
           <div class="collapse navbar-collapse navbar-right navbar-main-collapse">
             <ul class="nav navbar-nav">
-              <li><a href="/">HOME</a></li>
-              <li><a href="/about/">ABOUT</a></li>
-              <li><a href="/team/">TEAM</a></li>
+              <li><a href="/">トップページに戻る</a></li>
             </ul>
           </div>
           <!-- /.navbar-collapse -->
@@ -879,7 +877,7 @@
   <!-- countdown.js -->
   <script src="/js/countdown.js?20170803"></script>
 
-  <!--<script src="/js/one-page-nav.js"></script>-->
+  <!--<script src="js/one-page-nav.js"></script>-->
   <script src="/js/scripts.js"></script>
 </body>
 
