[modify] Ver.4対応

--- a/tracks/ver3.html
+++ b/tracks/ver3.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Takizawa Hackathon // 滝沢市のハッカソンコミュニティ</title>
+  <title>Takizawa Hackathon Ver.3 // 滝沢市のハッカソンコミュニティ</title>
   <meta name="keyword" content="TakizawaHachathon,滝沢ハッカソン,ハッカソン,岩手IT,学生">
   <meta name=”description” content=”Takizawa Hackathonは岩手の学生が主役のハッカソンコミュニティです。普段、作業を共にしない仲間とチームを組みものづくりすることで、新しいスキルや刺激を得るための機会として、ver.3を2017/08/05（土）、08/06（日）の2日間、開催します。” />
 
