--- a/about/index.html
+++ b/about/index.html
@@ -344,12 +344,12 @@
                   <div class="timeline-event-copy">
                     <p class="timeline-event-thumbnail">2017/08/05</p>
                     <h3>Takizawa Hackathon ver.3を開催</h3>
-                    <h4>開催内容を一新した滝沢ハッカソンを開催します。ITベンチャー企業であるオズビジョン様からの協賛などにより、より充実した内容を準備中です。</h4>
+                    <h4>開催内容を一新した滝沢ハッカソンを開催しました。ITベンチャー企業であるオズビジョン様からの協賛などにより、大変充実した内容となりました。</h4>
                     <div class="time-line-info-list">
                       <ul>
                         <li>
                           <p class="time-line-event-comment">
-                            <strong>テーマ</strong><br> 近日公開
+                            <strong>テーマ</strong><br> 滝沢を有名にする
                           </p>
                         </li>
                         <li>
@@ -359,12 +359,17 @@
                         </li>
                         <li>
                           <p class="time-line-event-comment">
-                            <strong>参加人数</strong><br> 20名ほどの予定
+                            <strong>参加人数</strong><br> 20名
                           </p>
                         </li>
                         <li>
                           <p class="time-line-event-comment">
                             <strong><a href="https://www.facebook.com/events/1906125736343140">Facebookイベントページ<i class="fa fa-external-link" aria-hidden="true"></i></a></strong><br>
+                          </p>
+                        </li>
+                        <li>
+                          <p class="time-line-event-comment">
+                            <strong><a href="/tracks/ver3.html">Ver.3のホームページ<i class="fa fa-external-link" aria-hidden="true"></i></a></strong><br>
                           </p>
                         </li>
                       </ul>
@@ -388,7 +393,6 @@
 
             <div class="section-to-company">
               <p>Takizawa Hackathonでは、これから持続的なイベント運営、プロダクト開発の支援を行っていく所存です。当活動内容にご賛同いただき、ご協賛頂ける企業・団体を募集しています。</p>
-              <p>現在、8月5日-6日で開催されるTakizawa Hackathon ver.3のスポンサーシップ募集を行っています。下記よりご確認いただけます。</p>
               <a href="https://goo.gl/forms/B6f7h76VAYpwBw7B3" class="btn blue-btn btn-default blue-btn-shadow wf-notosansjapanese" target="_blank">スポンサーになる</a>
             </div>
           </div>
