[modify] これまでのハッカソンにver.3追加

--- a/index.html
+++ b/index.html
@@ -581,19 +581,26 @@
           </div>
         </div>
         <div class="row locus-wrap">
-          <div class="col-sm-6 col-md-3 col-md-offset-3">
+          <div class="col-sm-4 col-md-4">
             <div class="locus-img">
               <a href="https://www.facebook.com/events/202342693527634/?acontext=%7B%22source%22%3A5%2C%22page_id_source%22%3A2288585408033900%2C%22action_history%22%3A[%7B%22surface%22%3A%22page%22%2C%22mechanism%22%3A%22main_list%22%2C%22extra_data%22%3A%22%7B%5C%22page_id%5C%22%3A2288585408033900%2C%5C%22tour_id%5C%22%3Anull%7D%22%7D]%2C%22has_source%22%3Atrue%7D"><img src="/img/takihack_1.png" class="img-responsive"  alt="第１回滝沢ハッカソンの画像"></a>
             </div>
           </div>
-          <!-- /.col-sm-6 -->
+          <!-- /.col-sm-4 -->
 
-          <div class="col-sm-6 col-md-3">
+          <div class="col-sm-4 col-md-4">
             <div class="locus-img">
               <a href="https://www.facebook.com/events/206098249794623/?acontext=%7B%22source%22%3A5%2C%22page_id_source%22%3A2288585408033900%2C%22action_history%22%3A[%7B%22surface%22%3A%22page%22%2C%22mechanism%22%3A%22main_list%22%2C%22extra_data%22%3A%22%7B%5C%22page_id%5C%22%3A2288585408033900%2C%5C%22tour_id%5C%22%3Anull%7D%22%7D]%2C%22has_source%22%3Atrue%7D"><img src="/img/takihack_2.png"  class="img-responsive" alt="第２回滝沢ハッカソンの画像"></a>
             </div>
           </div>
-          <!-- /.col-sm-6 -->
+          <!-- /.col-sm-4 -->
+
+          <div class="col-sm-4 col-md-4">
+            <div class="locus-img">
+              <a href="https://www.facebook.com/events/1906125736343140"><img src="/img/takihack_3.png"  class="img-responsive" alt="第3回滝沢ハッカソンの画像"></a>
+            </div>
+          </div>
+          <!-- /.col-sm-4 -->
         </div>
       </div>
       <!--end of .container -->
