--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Takizawa Hackathon // 滝沢市のハッカソンコミュニティ</title>
   <meta name="keyword" content="TakizawaHachathon,滝沢ハッカソン,ハッカソン,岩手IT,学生">
-  <meta name=”description” content=”Takizawa Hackathonは岩手の学生が主役のハッカソンコミュニティです。普段、作業を共にしない仲間とチームを組みものづくりすることで、新しいスキルや刺激を得るための機会として、ver.3を2017/08/05（土）、08/06（日）の2日間、開催します。” />
+  <meta name=”description” content=”Takizawa Hackathonは岩手の学生が主役のハッカソンコミュニティです。” />
 
   <meta property="og:title" content="Takizawa Hackathon // 滝沢市のハッカソンコミュニティ" />
-  <meta property="og:description" content="Takizawa Hackathonは岩手の学生が主役のハッカソンコミュニティです。普段、作業を共にしない仲間とチームを組みものづくりすることで、新しいスキルや刺激を得るための機会として、ver.3を2017/08/05（土）、08/06（日）の2日間、開催します。" />
+  <meta property="og:description" content="Takizawa Hackathonは岩手の学生が主役のハッカソンコミュニティです。" />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://takizawa-hackathon.github.io/" />
   <meta property="og:image" content="https://takizawa-hackathon.github.io/img/og_image.png" />
