--- a/about/index.html
+++ b/about/index.html
@@ -113,7 +113,7 @@
               <li><a href="/">HOME</a></li>
               <li><a href="/about/">ABOUT</a></li>
               <li><a href="/team/">TEAM</a></li>
-              <li><a href="https://goo.gl/forms/coPY9OMGNIa9Xaph2">参戦する</a></li>
+              <li><a href="https://forms.gle/KAVv57BbXpNV7cmY9">参戦する</a></li>
             </ul>
           </div>
           <!-- /.navbar-collapse -->
@@ -357,23 +357,6 @@
         </div>
       </section>
       <!-- .history -->
-
-      <section id="to-company" class="to-company">
-        <div class="container simple-page-wrapper">
-          <div class="row">
-            <div class="section-titles">
-              <h3>To companies and organizations</h3>
-              <p class="sub-title">企業・団体さまへ</p>
-            </div>
-
-            <div class="section-to-company">
-              <p>Takizawa Hackathonでは、これから持続的なイベント運営、プロダクト開発の支援を行っていく所存です。当活動内容にご賛同いただき、ご協賛頂ける企業・団体を募集しています。</p>
-              <a href="https://goo.gl/forms/B6f7h76VAYpwBw7B3" class="btn blue-btn btn-default blue-btn-shadow wf-notosansjapanese" target="_blank">スポンサーになる</a>
-            </div>
-          </div>
-        </div>
-      </section>
-      <!-- .to-company -->
     </article>
 
     <footer class="footer">
