--- a/team/index.html
+++ b/team/index.html
@@ -113,7 +113,7 @@
               <li><a href="/">HOME</a></li>
               <li><a href="/about/">ABOUT</a></li>
               <li><a href="/team/">TEAM</a></li>
-              <li><a href="https://goo.gl/forms/coPY9OMGNIa9Xaph2">参戦する</a></li>
+              <li><a href="https://forms.gle/KAVv57BbXpNV7cmY9">参戦する</a></li>
             </ul>
           </div>
           <!-- /.navbar-collapse -->
