--- a/about/index.html
+++ b/about/index.html
@@ -265,7 +265,7 @@
                         </li>
                         <li>
                           <p class="time-line-event-comment">
-                            <strong>開催場所</strong><br> 滝沢市IPU第2イノベーションセンター
+                            <strong>開催場所</strong><br> 岩手県立大学滝沢キャンパス構内(予定)
                           </p>
                         </li>
                         <li>
@@ -297,7 +297,7 @@
                         </li>
                         <li>
                           <p class="time-line-event-comment">
-                            <strong>開催場所</strong><br> 滝沢市IPU第2イノベーションセンター
+                            <strong>開催場所</strong><br> 岩手県立大学滝沢キャンパス構内(予定)
                           </p>
                         </li>
                         <li>
@@ -329,7 +329,7 @@
                         </li>
                         <li>
                           <p class="time-line-event-comment">
-                            <strong>開催場所</strong><br> 滝沢市IPU第2イノベーションセンター
+                            <strong>開催場所</strong><br> 岩手県立大学滝沢キャンパス構内(予定)
                           </p>
                         </li>
                         <li>
