comment out event date

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
         </div>
       </div>
       <div class="content content-two">
-        <div class="event-date"></div>
+        <!-- <div class="event-date"></div> -->
         <nav class="event-share-nav">
           <ul class="nav">
             <li><a href="https://twitter.com/share" class="twitter-share-button" data-lang="ja"
